--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,25 @@
 {
   "emmet.showAbbreviationSuggestions": false,
   "emmet.triggerExpansionOnTab": true
+
+
+  "liveSassCompile.settings.formats": [
+    {
+      "format": "expanded",
+      "extensionName": ".css",
+      "savePath": "/css"
+    },
+    {
+      "format": "compressed",
+      "extensionName": ".min.css",
+      "savePath": "/css"
+    }
+  ],
+  "liveSassCompile.settings.excludeList": [
+    "**/node_modules/**",
+    ".vscode/**"
+  ],
+  "liveSassCompile.settings.generateMap": true,
+  "liveServer.settings.port": 1235,
+  "liveSassCompile.settings.autoprefix": null
 }
